--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -78,10 +78,10 @@
         app:layout_constraintVertical_bias="0.295" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/etItemName"
         android:layout_width="177dp"
         android:layout_height="41dp"
-        android:background="#FFFEFE"
+        android:background="@drawable/custom_background"
         android:ems="10"
         android:inputType="textPersonName"
         android:textSize="18dp"
@@ -93,10 +93,10 @@
         app:layout_constraintVertical_bias="0.198" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/etItemPrice"
         android:layout_width="177dp"
         android:layout_height="41dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/custom_background"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
