--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -44,7 +44,7 @@
         android:layout_width="55dp"
         android:layout_height="30dp"
         android:gravity="center"
-        android:text="ADMIN"
+        android:text="ADMIN ONLY"
         android:textColor="#000000"
         android:textSize="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
