--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,144 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-<androidx.cardview.widget.CardView
-    android:layout_width="150dp"
-    android:layout_height="235dp"
-    android:layout_centerHorizontal="true"
-    android:layout_margin="12dp"
-    app:cardCornerRadius="12dp"
-    app:cardElevation="6dp">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:gravity="left"
-        android:orientation="vertical"
-        android:padding="16dp">
-
-        <ImageView
-            android:id="@+id/imgItem"
-            android:layout_width="90dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:src="@drawable/potato" />
+    <androidx.cardview.widget.CardView
+        android:layout_width="150dp"
+        android:layout_height="235dp"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="12dp"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="6dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:orientation="vertical">
+            android:gravity="left"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/imgItem"
+                android:layout_width="90dp"
+                android:layout_height="70dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="12dp"
-                android:gravity="center"
-                android:text="আলু"
-                android:lines="1"
-                android:ellipsize="end"
-                android:textColor="#000000" />
+                android:src="@drawable/potato" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_gravity="center"
-                android:gravity="center">
-            <TextView
-                android:id="@+id/price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:layout_gravity="center"
-                android:text="₹20"
-                android:textColor="#000000" />
+                android:orientation="vertical">
+
                 <TextView
-                    android:id="@+id/unit"
+                    android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:layout_gravity="center"
-                    android:text="/kg"
+                    android:layout_marginTop="12dp"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:text="আলু"
                     android:textColor="#000000" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="₹20"
+                        android:textColor="#000000" />
+
+                    <TextView
+                        android:id="@+id/unit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:text="/kg"
+                        android:textColor="#000000" />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="2dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginBottom="4dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/minus"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
-                android:layout_gravity="center"
-                android:layout_margin="2dp"
-                android:background="#FFC107"
-                android:foregroundGravity="center"
-                android:gravity="center"
-                android:text="-"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:textSize="10dp" />
-
-            <TextView
-                android:id="@+id/txtQuantity"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="2dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginRight="2dp"
-                android:text="1.0"
-                android:textColor="#000000" />
+                android:layout_marginBottom="4dp"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/minus"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_gravity="center"
+                    android:layout_margin="2dp"
+                    android:background="#FFC107"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:text="-"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="10dp" />
+
+                <TextView
+                    android:id="@+id/txtQuantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
+                    android:text="1.0"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:id="@+id/txtUnit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
+                    android:text="kg"
+                    android:textColor="#000000" />
+
+                <Button
+                    android:id="@+id/plus"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginRight="2dp"
+                    android:background="#FFC107"
+                    android:foregroundGravity="center"
+                    android:gravity="center"
+                    android:text="+"
+                    android:textAlignment="center"
+                    android:textColor="#000000"
+                    android:textSize="10dp" />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/txtUnit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:text="kg"
-                android:textColor="#000000" />
+                android:id="@+id/txtItemId"
+                android:layout_width="0.1dp"
+                android:layout_height="0.1dp"
+                android:visibility="invisible" />
 
             <Button
-                android:id="@+id/plus"
-                android:layout_width="22dp"
-                android:layout_height="22dp"
+                android:id="@+id/btnATC"
+                android:layout_width="75dp"
+                android:layout_height="35dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="2dp"
-                android:layout_marginRight="2dp"
-                android:background="#FFC107"
-                android:foregroundGravity="center"
-                android:gravity="center"
-                android:text="+"
-                android:textAlignment="center"
-                android:textColor="#000000"
-                android:textSize="10dp" />
+                android:layout_marginTop="8dp"
+                android:background="#DF362D"
+                android:text="Add to cart"
+                android:textColor="#FFFFFF"
+                android:textSize="8sp" />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/btnATC"
-            android:layout_width="75dp"
-            android:layout_height="35dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            android:background="#DF362D"
-            android:text="Add to cart"
-            android:textColor="#FFFFFF"
-            android:textSize="8sp" />
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
