--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,14 +37,46 @@
                 android:textColor="#FFFF"
                 android:textSize="10dp"
                 android:textStyle="bold" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/cart"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="6dp"
-                android:src="@drawable/cart" />
+                <ImageView
+                    android:id="@+id/cart"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="6dp"
+                    android:src="@drawable/cart"
+
+                    />
+                <ImageView
+                    android:id="@+id/noti_back"
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:layout_toRightOf="@+id/cart"
+                    android:layout_marginLeft="-10dp"
+                    android:layout_marginTop="-10dp"
+                    android:src="@drawable/redcircle"
+
+
+                    />
+
+                <TextView
+                    android:id="@+id/noti"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="-10dp"
+
+                    android:layout_toRightOf="@+id/cart"
+                    android:src="@drawable/ic_round_lens_24"
+                    android:text="5"
+
+                    android:textColor="#FFFFFF" />
+
+            </RelativeLayout>
+
+
         </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
