--- a/app/src/main/res/layout/activity_reviewitems.xml
+++ b/app/src/main/res/layout/activity_reviewitems.xml
@@ -123,6 +123,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="700"
+                android:id="@+id/grandtotal"
                 android:textColor="@android:color/black"
                 android:textSize="15sp"
                 android:textStyle="bold" />
