--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,15 +63,13 @@
                     />
 
                 <TextView
-                    android:id="@+id/noti"
+                    android:id="@+id/txtNoti"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginLeft="-10dp"
-
                     android:layout_toRightOf="@+id/cart"
                     android:src="@drawable/ic_round_lens_24"
-                    android:text="5"
-
+                    android:text="0"
                     android:textColor="#FFFFFF" />
 
             </RelativeLayout>
