--- a/app/src/main/res/layout/activity_select_edit.xml
+++ b/app/src/main/res/layout/activity_select_edit.xml
@@ -7,16 +7,30 @@
     android:background="@drawable/bgintrod"
     tools:context=".activities.SelectEditActivity">
 
+
     <TextView
         android:id="@+id/txtItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="120dp"
         android:layout_marginTop="20dp"
-        android:textStyle="bold"
+        android:gravity="center"
         android:text="Your Items"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_above="@id/rvProduct"
+        android:layout_toEndOf="@id/txtItem"
+        android:layout_marginBottom="8dp"
+        android:layout_alignParentEnd="true"
+        android:src="@drawable/vieworder" />
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvProduct"
