--- a/app/src/main/res/layout/view_order_dialog.xml
+++ b/app/src/main/res/layout/view_order_dialog.xml
@@ -35,7 +35,7 @@
             <TextView
                 android:layout_width="20dp"
                 android:layout_height="match_parent"
-                android:gravity="end"
+                android:gravity="center"
                 android:text="Price"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 android:textSize="16dp"
@@ -44,7 +44,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:gravity="center"
+                android:gravity="start"
                 android:text="Quantity"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 android:textSize="16dp"
@@ -54,7 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Total"
-                android:gravity="center"
+                android:gravity="start"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                 android:textSize="16dp"
                 android:textStyle="bold" />
