--- a/app/src/main/res/layout/view_order_dialog_list_item.xml
+++ b/app/src/main/res/layout/view_order_dialog_list_item.xml
@@ -7,7 +7,7 @@
         android:id="@+id/tblCartList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="0,1,2,3">
+        android:stretchColumns="1,2,3">
 
         <TableRow
             android:paddingTop="5dp"
@@ -15,8 +15,8 @@
 
             <TextView
                 android:id="@+id/txtIName"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Potato"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
