--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -25,6 +25,7 @@
                 android:layout_width="90dp"
                 android:layout_height="70dp"
                 android:layout_gravity="center"
+                android:scaleType="centerCrop"
                 android:src="@drawable/potato" />
 
             <LinearLayout
